unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Account__c</fullName>
    <formula>LeanData__Journey__r.LeanData__Account__c</formula>
    <label>Linked Account</label>
    <type>Text</type>
</CustomField>