unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Contact__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Member_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>