unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__First_Marketing_Signal_Campaign__c.field-meta.xml
<CustomField>
    <fullName>LeanData__First_Marketing_Signal_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Marketing Signal Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>First Marketing Signal Campaign Group</relationshipLabel>
    <relationshipName>First_Marketing_Signal_Campaign_Group</relationshipName>
    <type>Lookup</type>
</CustomField>