unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__First_Signal_Days_To_Journey_Qualified__c.field-meta.xml
<CustomField>
    <fullName>LeanData__First_Signal_Days_To_Journey_Qualified__c</fullName>
    <formula>DATEVALUE( LeanData__Journey__r.LeanData__Qualified_Date__c ) - DATEVALUE( LeanData__First_Signal_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Signal Days To Journey Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>