unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Journey__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeanData Journey</label>
    <referenceTo>LeanData__Journey__c</referenceTo>
    <relationshipLabel>LeanData Member to Journeys</relationshipLabel>
    <relationshipName>LeanData_Member_to_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>