unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Journey_Persona__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Journey_Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LD Journey Persona</label>
    <referenceTo>LeanData__Journey_Persona__c</referenceTo>
    <relationshipLabel>LD Journey Personas</relationshipLabel>
    <relationshipName>LD_Journey_Persona</relationshipName>
    <type>Lookup</type>
</CustomField>