unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunity__c</fullName>
    <formula>LeanData__Journey__r.LeanData__Opportunity__c</formula>
    <label>Linked Opportunity</label>
    <type>Text</type>
</CustomField>