unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Segment__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment</label>
    <referenceTo>LeanData__Long_Text_Setting__c</referenceTo>
    <relationshipLabel>Member Segment</relationshipLabel>
    <relationshipName>Journey_Member_Segment</relationshipName>
    <type>Lookup</type>
</CustomField>