unpackaged/main/default/objects/LeanData__Journey_Member__c/fields/LeanData__Status__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>